[gd_scene load_steps=4 format=3 uid="uid://dvpbpyqh1rbbn"]

[ext_resource type="Script" uid="uid://dgxgbam6x3fnh" path="res://scenes/hud.gd" id="1_836p8"]

[sub_resource type="InputEventAction" id="InputEventAction_fll2u"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_r3xks"]
events = [SubResource("InputEventAction_fll2u")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_836p8")

[node name="CollectionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CollectionTime" type="Label" parent="."]
visible = false
offset_left = 576.0
offset_top = 192.0
offset_right = 1344.0
offset_bottom = 324.0
theme_override_font_sizes/font_size = 50
text = "TIME BEFORE UNDEAD ATTACK: "

[node name="Message" type="Label" parent="."]
custom_minimum_size = Vector2(480, 2.08165e-12)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -11.5
offset_right = 240.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "ZOMBIE GAME"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="startButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
shortcut = SubResource("Shortcut_r3xks")
text = "START
"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="health" type="Label" parent="."]
visible = false
offset_left = 1545.0
offset_top = 1.0
offset_right = 1910.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 60
text = "HEALTH: 100"

[node name="Score" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_top = -0.004
anchor_right = 0.004
offset_left = 3.0
offset_top = 1.32
offset_right = 270.32
offset_bottom = 84.0
theme_override_font_sizes/font_size = 60
text = "SCORE: 0"

[node name="Wood" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -114.0
offset_right = 114.0
offset_bottom = 83.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "WOOD: "

[connection signal="timeout" from="CollectionTimer" to="." method="_on_collection_timer_timeout"]
[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
